<resources>
    <string name="app_name">A Game List</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="nombre">Nombre</string>
    <string name="contraseña">Contraseña</string>
    <string name="olvido">¿Olvidaste tu contraseña?</string>
    <string name="registrarse">Registrarse</string>
    <string name="email">Email</string>
    <string name="aviso_legal">Acepto la información legal</string>
    <string name="restablecer_contraseña">Restablecer contraseña</string>
    <string name="recuperar_informacion">Introduzca su Email asociado a nuestro servidor y en breve le enviaremos un código para restablecer su contraseña</string>
    <string name="enviar_codigo">Enviar código</string>
    <string name="volver_enviar">Volver a enviar</string>
    <string name="inicio_sin_cuenta">Acceder sin sesión</string>
    <string name="logo">Logo</string>
    <string name="barraCarga">Barra de carga del splash</string>
    <string name="fondoHex">Fondo hexagonos</string>
    <string name="img_perfil">Foto de perfil</string>
    <string name="desc_img_juego">Imagen del juego</string>
    <string name="Vuelta_atras">Icono vuelta atras</string>
    <string name="btn_responder">Responder</string>
    <string name="btn_nuevaLista">Nueva lista</string>
    <string name="publicar">Publicar</string>
    <string name="titulo_juego">Título del juego</string>
    <string name="elemento_aux">Elemento auxiliar</string>
    <string name="nota_juego">9,5</string>
    <string name="nombre_usuario">Celia Martín</string>
    <string name="arroba_usuario">@celiamartin</string>
    <string name="fecha">24/05/2023</string>
    <string name="likes_resenia">389</string>
    <string name="menu_noticias">Noticias</string>
    <string name="menu_resenas">Reseñas</string>
    <string name="menu_ranking">Ranking</string>
    <string name="menu_listas">Listas</string>
    <string name="menu_resenasPerfil">Reseñas</string>
    <string name="menu_rating">Rating</string>
    <string name="lanzamientos">ÚLTIMOS LANZAMIENTOS</string>
    <string name="reseñas_recientes">RESEÑAS MÁS RECIENTES</string>
    <string name="ranking_localidad">RANKING POR LOCALIDAD</string>
    <string name="juegos_similares">JUEGOS SIMILARES</string>
    <string name="puntuacion_resena">5</string>
    <string name="min_ago">8m ago</string>
    <string name="numSiguiendo">20</string>
    <string name="numSeguidores">214</string>
    <string name="numResenas">45</string>
    <string name="lorem_ipsum_largo">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam elementum, tellus eu vulputate porttitor, enim nisl commodo urna, in sagittis turpis dolor nec sapien. Etiam et sodales nunc, in porta ante. Nam quis mauris accumsan, lobortis ante sed, mollis ex. Duis pretium lorem mauris, sed molestie enim auctor sit amet. Praesent tempus velit ligula, sit amet rhoncus turpis dapibus vel. Nullam nec eros nisi. Vivamus sodales neque blandit hendrerit cursus. Nam elementum ex nec lorem sollicitudin, non rutrum turpis mattis. Mauris tortor odio, iaculis a dolor ut, auctor vestibulum justo. Donec luctus id quam vel sodales. Proin consectetur non orci in sollicitudin. Pellentesque quis tempor sem, malesuada porttitor tortor. Nunc sem turpis, accumsan non auctor id, tempor sit amet quam. Sed eget sapien eget turpis malesuada ultrices in at libero. Praesent id enim posuere, elementum libero vel, aliquam mauris. Curabitur id elit semper, pharetra enim in, venenatis lacus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; In eu volutpat nibh. Nam ac nibh non odio feugiat tristique sit amet vitae odio. Aenean sed erat vel ipsum accumsan efficitur sed eu lacus. Vestibulum et iaculis nisl. Vestibulum vulputate, eros eu auctor rhoncus, ante justo maximus ante, ut dignissim nisi orci eu risus. Mauris ullamcorper leo felis. Cras maximus ante a massa imperdiet ornare. Nullam dapibus orci sit amet metus imperdiet, eu posuere elit rhoncus. Nunc id vehicula odio, sit amet convallis quam. Integer facilisis turpis et tellus consectetur aliquam.</string>
    <string name="lorem_ipsum_corto">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam elementum, tellus eu vulputate porttitor, enim nisl commodo urna, in sagittis turpis dolor nec sapien. Etiam et sodales nunc, in porta ante.</string>
    <string name="profile_text">Perfil</string>
    <string name="profile_config_text">Configuracion</string>
    <string name="profile_cuenta">Cuenta</string>
    <string name="profile_notificaciones">Notificaciones</string>
    <string name="profile_varios">Varios</string>
    <string name="profile_publico">Publico</string>
    <string name="profile_publico_user">Usuario</string>
    <string name="profile_publico_name">Nombre</string>
    <string name="profile_publico_pronouns">Pronombres</string>
    <string name="profile_publico_pais">País</string>
    <string name="profile_publico_date">Fecha de nacimiento</string>
    <string name="profile_publico_bio">Biografía</string>
    <string name="profile_privado">Privado</string>
    <string name="profile_privado_surname">Apellidos</string>
    <string name="profile_privado_email">Correo</string>
    <string name="profile_privado_phone">Teléfono</string>
    <string name="profile_privado_localidad">Localidad</string>
    <string name="profile_privado_password">Contraseña</string>
    <string name="profile_comentarios">Comentarios (WIP)</string>
    <string name="profile_comentarios_respuestas">Permitir respuestas</string>
    <string name="profile_comentarios_push">Notificaciones push</string>
    <string name="profile_comentarios_email">Aviso correo</string>
    <string name="profile_redes">Redes</string>
    <string name="profile_redes_twitter">Twitter</string>
    <string name="profile_redes_facebook">Facebook</string>
    <string name="profile_redes_instagram">Instagram</string>
    <string name="profile_redes_tiktok">TikTok</string>
    <string name="profile_redes_youtube">Youtube</string>
    <string name="profile_seguridad">Seguridad</string>
    <string name="profile_seguridad_2FA">Verificacion en dos pasos (WIP)</string>
    <string name="profile_seguridad_visibilidad">Visibilidad del perfil</string>
    <string name="profile_data_name">Name</string>
    <string name="profile_data_user">User</string>
    <string name="info">Información</string>
    <string name="api">Aplicacion creada con la api IGDB</string>
    <string-array name="array_visibilidad">
        <item>Todos</item>
        <item>Seguidores</item>
        <item>No</item>
    </string-array>
    <string name="Cambiar_foto_perfil">Cambiar foto de perfil</string>
    <string-array name="array_localidades">
        <item>Álava</item>
        <item>Albacete</item>
        <item>Alicante</item>
        <item>Almería</item>
        <item>Asturias</item>
        <item>Ávila</item>
        <item>Badajoz</item>
        <item>Barcelona</item>
        <item>Burgos</item>
        <item>Cáceres</item>
        <item>Cádiz</item>
        <item>Cantabria</item>
        <item>Castellón</item>
        <item>Ciudad Real</item>
        <item>Córdoba</item>
        <item>La Coruña</item>
        <item>Cuenca</item>
        <item>Gerona</item>
        <item>Granada</item>
        <item>Guadalajara</item>
        <item>Guipúzcoa</item>
        <item>Huelva</item>
        <item>Huesca</item>
        <item>Islas Baleares</item>
        <item>Jaén</item>
        <item>León</item>
        <item>Lérida</item>
        <item>Lugo</item>
        <item>Madrid</item>
        <item>Málaga</item>
        <item>Murcia</item>
        <item>Navarra</item>
        <item>Orense</item>
        <item>Palencia</item>
        <item>Las Palmas</item>
        <item>Pontevedra</item>
        <item>La Rioja</item>
        <item>Salamanca</item>
        <item>Segovia</item>
        <item>Sevilla</item>
        <item>Soria</item>
        <item>Tarragona</item>
        <item>Santa Cruz de Tenerife</item>
        <item>Teruel</item>
        <item>Toledo</item>
        <item>Valencia</item>
        <item>Valladolid</item>
        <item>Vizcaya</item>
        <item>Zamora</item>
        <item>Zaragoza</item>
    </string-array>
</resources>