<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@drawable/grad_background"
    tools:context=".fragment_post_splash"
    tools:ignore="ExtraText">

    <ImageView
        android:id="@+id/fondohex"
        android:layout_width="923dp"
        android:layout_height="1520dp"
        android:src="@drawable/hexagonos_pantalla_carga"
        app:contentDescription="@string/fondoHex"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/imgView_logo"
        android:layout_width="250dp"
        android:layout_height="300dp"
        android:layout_marginTop="90dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logosvg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/ly_start_interactuables"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="1"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgView_logo">

        <Button
            android:id="@+id/bt_start_Registrarse"
            style="@style/boton_morado"
            android:text="@string/registrarse" />

        <Button
            android:id="@+id/bt_start_Login"
            style="@style/boton_morado"
            android:layout_marginTop="25dp"
            android:text="@string/iniciar_sesion" />


        <TextView
            android:id="@+id/tx_start_forgotPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/armata"
            android:text="@string/olvido"
            android:textColor="@color/white"
            android:textSize="13sp" />

        <Button
            android:id="@+id/bt_start_AccederSinSesion"
            style="@style/boton_morado"
            android:layout_height="33dp"
            android:layout_marginTop="55dp"
            android:text="@string/inicio_sin_cuenta"
            android:textSize="13sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>